Connection to SQL_Server database alredy finished, were also created the authors table in the database

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "defaultConnection": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Web_Api;Integrated Security=true"
   }
+
 }
